# odd-models-package

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: create_pypi_package.yaml
adapter/: __init__.py
api_client/: http_client.py
docker/openapi/: Dockerfile
examples/: client.py  lambda_discovery.py  postgres_models.py
odd_contract/: __init__.py
odd_models/: __init__.py  sql_parser.py
odd_models/api_client/api/: open_data_discovery_ingestion_api.py
odd_models/api_client/v2/: errors.py  odd_api_client.py
odd_models/discovery/: data_source.py  helper.py
odd_models/discovery/data_assets/: __init__.py  aws_lambda.py  data_asset.py  data_asset_list.py  database.py  s3_artifact.py
odd_models/models/: models.py
odd_models_src/: README.md  integrator.py  logger.py  sql_parser.py  utils.py
odd_models_src/api_client/: http_client.py
odd_models_src/api_client/v2/: errors.py  odd_api_client.py
openapi-generator/: controller.mustache
openapi_generator/: __init__.mustache  controller.mustache  encoder.mustache  pyproject.toml  serializers.mustache  setup.py
openapi_generator/adapter/: __init__.mustache  controller.mustache
openapi_generator/api_client/: __init__api.mustache  api.mustache
tests/: test_sql_parser.py
tests/discovery/: test_data_assets_list.py  test_dicovery.py  test_lambda.py  test_link_nodes.py
