[tool.poetry]
name = "odd-models"
version = "2.0.21"
description = "Open Data Discovery Models"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opendatadiscovery/odd-models-package"
repository = "https://github.com/opendatadiscovery/odd-models-package"
keywords = ["odd-models", "odd_models", "opendatadiscovery"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
sqlparse = "0.4.2"
requests = "2.28.2"
sql-metadata = "^2.6.0"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
