[tool.poetry]
name = "odd-models"
version = "2.0.48"
description = "Open Data Discovery Models"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opendatadiscovery/odd-models-package"
repository = "https://github.com/opendatadiscovery/odd-models-package"
keywords = ["odd-models", "odd_models", "opendatadiscovery"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.0"
sqlparse = "^0.5.0"
requests = "^2.31.0"
sql-metadata = "^2.6.0"
loguru = "^0.7.2"
oddrn-generator = "^0.1.101"
funcy = "^2.0"
sqllineage = "^1.4.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"
datamodel-code-generator = "^0.25.5"
pytest-mock = "^3.14.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
